...
          padding: const EdgeInsets.all(8.0),
          child: Row(
            children: [
              Expanded(
                flex: 3,
                child: TextField(
                  key: const Key('counterTextField'),
                  controller: _textController,
                  decoration: InputDecoration(
                      filled: true,
                      fillColor: Theme.of(context).colorScheme.primary,
                      border: const OutlineInputBorder()),
                  keyboardType: TextInputType.number,
...
                ),
              ),
              const Spacer(),
              Expanded(
                flex: 2,
                child: ElevatedButton(
                    key: const Key('counterSetButton'),
                    onPressed: () {
                      _textController.text.isNotEmpty
                          ? counterController
                              .setValue(int.parse(_textController.text))
                          : null;
                      _textController.clear();
...
